--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 1.- Multiple bars to order sandwiches.
         - Create bars -> Done
-        - Input sandwich of each bar. -> Delete and update.
+        - Input sandwich of each bar. -> Done
         - Input toppings availables.
         - Shop of the day.
         - API:
